--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
   <title>Gunslinger</title>
 </head>
 <body>
-  <h1>Howdy pardner</h1>
+  <h1>{{ .Title }}</h1>
   <p>This here is my handy "do everything" api server</p>
   <p>You can see the source code over on <a href="https://github.com/marcus-crane/gunslinger">Github</a>.</p>
 </body>
